Touched up for MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,4 @@
-cmake_minimum_required(VERSION 3.20) # This minimum requirement allows us to not
-                                     # worry whether CMake is automatically
-                                     # adding the RTTI enable flag to an MSVC
-                                     # build
+cmake_minimum_required(VERSION 3.20)
 
 project(
     brasstacks_math
