--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .vs/
 .vscode/
+.cache/
 build/
 debug/
 release/
@@ -8,3 +9,5 @@ release/
 **/*.pdb
 **/*.exe.manifest
 **/*.exe
+
+compile_commands.json
