--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -41,6 +41,8 @@ set_target_properties(
 	CXX_STANDARD 20
 	CXX_STANDARD_REQUIRED ON
 
+    EXPORT_COMPILE_COMMANDS ON
+
 	RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_SOURCE_DIR}/debug/bin
 	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/release/bin
 )
