--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,6 @@ FetchContent_Declare(
     GIT_TAG 3f0283de7a9c43200033da996ff9093be3ac84dc # 2023-02-27
     FIND_PACKAGE_ARGS 3.3.2
 )
-
 FetchContent_MakeAvailable(Catch2)
 
 file(
@@ -19,29 +18,30 @@ file(
     "*.hpp"
 )
 
+set(BINARY_TARGET brasstacks_math_tests)
+
 add_executable(
-    brasstacks-math-tests
+    ${BINARY_TARGET}
 	${TESTS_SOURCE}
 	${TESTS_HEADERS}
 )
 
 target_include_directories(
-    brasstacks-math-tests PUBLIC
+    ${BINARY_TARGET} PUBLIC
     ${CMAKE_SOURCE_DIR}
 )
 
 target_link_libraries(
-	brasstacks-math-tests PUBLIC
+	${BINARY_TARGET} PUBLIC
 	brasstacks_math
     Catch2::Catch2WithMain
 )
 
 set_target_properties(
-	brasstacks-math-tests PROPERTIES
+	${BINARY_TARGET} PROPERTIES
 	CXX_STANDARD 20
 	CXX_STANDARD_REQUIRED ON
-
-    EXPORT_COMPILE_COMMANDS ON
+	CXX_EXTENSIONS OFF
 
 	RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${CMAKE_SOURCE_DIR}/debug/bin
 	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/release/bin
